# sagemaker-mlops-ref-arch

./: .gitignore  README.md  pyproject.toml
code/data/: Inference.csv
code/deployment/: data-exploration.ipynb
code/src/inference/: inference.py
code/src/train/: requirements.txt  train.py
dags/: pyproject.toml
dags/src/dags/: definitions.py
dags/src/dags/defs/: feature_engineering.py  perform_inference.py  test.py  train_model.py
emr/: upload_to_s3.sh
emr/data/: =0.28.17  =1.1.3  build_venv.sh  load_feature_store.ipynb  setup_local_emr.sh  start_emr.sh
emr/src/train/: requirements.txt  train.py
emr/src/transform/: transform.py
tofu/: iam.tf  infra.tf  provider.tf  variables.tf
