[project]
name = "dags"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "botocore[crt,sso]>=1.42.59",
    "dagster==1.12.17",
    "dagster-aws>=0.28.17",
    "sagemaker[mlops]>=3.6.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dags"
registry_modules = [
    "dags.components.*",
]


